Tue May 29 19:07:40 2001  George Lebl <jirka@5z.com>

	* Makefile.am, conditional.[ch], gnome-panel-properties.c,
	  launcher.c, main.c, config/Applet_Config, config/Makefile.am,
	  config/panel.config, config/panel.global: Put the default config
	  into a set of installed files rather then hardcoded.  The failsafe
	  default is a bottom panel with a menu, it should also probably
	  complain in that case.

	* session.c: Allow per user control of which users are restricted or
	  unrestricted, and change the name of the section to Restrictions

2001-05-29  Havoc Pennington  <hp@redhat.com>

	* gnome-run.c: Add a list of desktop entries, and "advanced mode"
	for the old behavior

	* menu.c: add panel_add_favorite() function

	* menu-fentry.c: add a way to list all loaded dirs
	
Tue May 29 00:55:34 2001  George Lebl <jirka@5z.com>

	* menu.c, drawer.c, extern.c, launcher.c, logout.c, session.c:  Never
	  set commie mode or no runbox mode on root.  Don't add the
	  preferences/properties menuitems, even for external applets.

Mon May 28 23:38:29 2001  George Lebl <jirka@5z.com>

	* Applying patch:

Sun May 27 16:14:44 2001  Michal Palczewski <mpalczew@u.washington.edu>

	* tasklist_icon.c: fix memory leak in 

Mon May 28 02:50:50 2001  George Lebl <jirka@5z.com>

	* xstuff.[ch], basep-widget.c, foobar-widget.c:  Set the USSize and
	  USPosition hints, as well as the Min/Max size hints to disallow
	  resizing.

Sun May 27 18:30:42 2001  George Lebl <jirka@5z.com>

	* Makefile.am, session.[ch], menu.c, gnome-panel-properties.c,
	  main.c, applet.c, gnome-run.c, panel-widget.c, panel.c: Implement
	  reading of defaults from a global directory.  At some close point
	  in the future the default config will be made a set of files and
	  installed and the default config that's hardcoded will disappear
	  (become something simple for failsafe reasons).  Also add a
	  LockDown (commie mode) and a NoRunBox configuration stuff for anal