@@ -1,3 +1,10 @@
+Tue May 29 19:23:10 2001  George Lebl <jirka@5z.com>
+
+	* gnome-run.c: load pixmaps correctly, when loading icon from dentry
+	  look into the pixmap dir as well, check for NULLs at the right
+	  places and use /panel/State rather then /panel/Config for the state
+	  of the advanced toggle setting thingie
+
 Tue May 29 19:07:40 2001  George Lebl <jirka@5z.com>
 
 	* Makefile.am, conditional.[ch], gnome-panel-properties.c,
